--- a/ecommerce/src/index.css
+++ b/ecommerce/src/index.css
@@ -21,3 +21,9 @@ body{
     justify-content: center;
     align-items: center;
 }
+.cartDiv{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
